<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/bg_2"
    android:backgroundTint="#272727"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/str_35"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/str_36"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/feedback_message_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_3"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="start"
        android:hint="@string/str_37"
        android:lines="6"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#686868"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/send_text"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:alpha="0.5"
        android:background="@drawable/bg_4"
        android:enabled="false"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingHorizontal="25dp"
        android:text="@string/str_38"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>
