<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ReverseVideo.ReverseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="16dp"
            android:src="@drawable/back_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:singleLine="true"
            android:text="@string/str_103"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/downloadVideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:padding="12dp"
            android:src="@drawable/video_download_img" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1">

        <VideoView
            android:id="@+id/reverseVideoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:keepScreenOn="true" />

        <ImageView
            android:id="@+id/imagePlayPause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@drawable/video_play_img" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="00:00:00"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10sp"
                android:gravity="center">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvVideoFrame"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/videoSliceSeekBar"
                    app:layout_constraintEnd_toEndOf="@+id/videoSliceSeekBar"
                    app:layout_constraintStart_toStartOf="@+id/videoSliceSeekBar"
                    app:layout_constraintTop_toTopOf="@+id/videoSliceSeekBar" />

                <com.exmple.funnyvideo.Tools.VideoSeekBarTimer
                    android:id="@+id/seekbarTimer"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.exmple.funnyvideo.ReverseVideo.VideoSliceSeekBar5
                    android:id="@+id/videoSliceSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/left_pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="00:00:00"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/right_pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="00:00:00"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <RadioButton
                android:id="@+id/with_reverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:button="@drawable/custom_radiobutton"
                android:checked="true"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="15dp"
                android:text="@string/str_104"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/without_reverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radiobutton"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="15dp"
                android:text="@string/str_105"
                android:textColor="@color/white" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>